Float-01: floated the image to the left side of the paragraph and added margin to all sides but the left Float-02: floated the image to the right side of the paragraph and switched the margins,then justified the text Float-03: floated the image to the laft and added margin to all four sides, then cleared the float so the second paragraph wouldn't wrap around the image Float-04: Floated the image to the left and added margin to all sides, added a light blue background to the div, then used clearfix to fix the margin overflow and merge the background to the image

--- a/my-styles.css
+++ b/my-styles.css
@@ -46,3 +46,46 @@
           border: 10px solid black;
           margin-left: 20%;
 	}
+
+#float-01 img {
+	  float: left;
+	  margin-right: 20px;
+	  margin-top: 25px;
+	}
+
+#float-02 img {
+	  float: right;
+	  margin-left: 20px;
+	  margin: 25px;
+	}
+
+#float-02 p {
+	  text-align: justify;
+	}
+
+#float-03 img {
+	  float: left; 
+	  margin-top: 10px;
+	  margin-bottom: 10px;
+	  margin-left: 10px;
+	  margin-right: 20px;
+	}
+
+#float-03 .clear {
+	  clear: left;
+	}
+
+#float-04 img {
+	  float: left;
+	  margin: 10px;
+	  margin-bottom: 10px;
+	  margin-left: 10px;
+	  margin-right: 20px;
+	  }
+
+#float-04 div {
+	  background-color: lightblue;
+	  content: "";
+ 	  display: table;
+ 	  clear: both;
+	}
